--- a/src/app/components/entity-form/entity-form.component.css
+++ b/src/app/components/entity-form/entity-form.component.css
@@ -13,3 +13,13 @@ input{
     width: 80%;
     margin-left: 230px;
 }
+
+.contact_details{
+    margin-top: 20px;
+}
+
+.add_remove{
+    margin-top: 10px;
+}
+
+
