--- a/src/app/components/drive-management/hiring-drive-info/hiring-drive-info.component.css
+++ b/src/app/components/drive-management/hiring-drive-info/hiring-drive-info.component.css
@@ -2,3 +2,20 @@
     width: 80%;
     margin-left: 230px;
 }
+
+.description{
+    width: 50%;
+    float: right;
+    margin-right: -17%;
+    margin-top: 5%;
+    margin-bottom: 3%;
+}
+
+.switch-drive{
+    float:right;
+    margin-right: 1%;
+}
+
+.entity-heading{
+    margin-top: 50px;
+}
