--- a/src/app/components/drive-management/hiring-drive-form/hiring-drive-form.component.css
+++ b/src/app/components/drive-management/hiring-drive-form/hiring-drive-form.component.css
@@ -34,3 +34,15 @@ input{
     margin-bottom: 10px;
     margin-top: -10px;
 }
+
+.space{
+    margin-left: 10px;
+}
+
+.space-button{
+    margin-bottom: 10px;
+}
+
+.input{
+    height: 20px;
+}
