--- a/src/app/components/drive-management/hiring-drive-form/show-admin-form/show-admin-form.component.html
+++ b/src/app/components/drive-management/hiring-drive-form/show-admin-form/show-admin-form.component.html
@@ -25,17 +25,21 @@
         </div>
 
         <div class="modal-body">
-            <form #entityForm="ngForm" (ngSubmit)="getAdminData(entityForm.value)">
+            <form  [formGroup]="form" (ngSubmit)="getAdminData()">
                 <li class="form-check" *ngFor="let panelist of panelistData" class="list">
-                    <input class="form-check-input" type="Checkbox" name="admin" ngModel>
-                    <label class="form-check-label" for="name">{{panelist.panelist_first_name}}</label>
+                  <input class="form-check-input" type="Checkbox" [value]="panelist.panelist_first_name" name="admin" (change)="onCheckboxChange($event)"  formControlName="{{panelist.panelist_first_name}}">{{panelist.panelist_first_name}}
                 </li>
-
-                <!-- <label for="entityname" >Entity Name:</label>
-                <input type="text" id="entityname" name="entity_name" placeholder="Enter Entity Name" ngModel><br> -->
+                <button class="btn btn-success" type="submit">Save</button>
             </form>
+            
         </div>
         
       </div>
     </div>
+</div>
+
+<div >
+  <ul *ngFor="let item of result" class="list">
+    <li><input class="form-check-input" type="Checkbox" name="admin_data" checked>{{item}}</li>
+  </ul>
 </div>
