--- a/src/app/components/drive-management/hiring-drive-form/show-admin-form/show-admin-form.component.html
+++ b/src/app/components/drive-management/hiring-drive-form/show-admin-form/show-admin-form.component.html
@@ -2,7 +2,7 @@
 <div class="container">
     <div class="row mt-4 mb-2 text-center d-inline-flex p-2">
       <div class="col">
-        <button type="button" (click)="openAdminFormModal()" class="btn btn-danger" >
+        <button type="button" (click)="openAdminFormModal()" class="btn btn-outline-danger border-danger" >
           Select Admin
         </button>
         <!-- {{EntityData | json}} -->
